--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -227,6 +227,12 @@
         margin-bottom: 12px;
         width: 80%;
       }
+      @media (max-width: 599px) {
+        @include fz(18);    
+        padding: 0px 60px;
+        height: 60px;
+	      line-height: 60px;
+      }
     }
     // @media (max-width: 768px) {
     //   position: absolute;
@@ -344,9 +350,9 @@
 }
 
 .screen-benefits {
-  @media (max-width: 992px) {
-    height: calc(var(--vh, 1vh) * 100);
-  }  
+  // @media (max-width: 992px) {
+  //   height: calc(var(--vh, 1vh) * 100);
+  // }  
 }
 
 .screen-alert {
@@ -410,16 +416,24 @@
   height: 100vh;
   max-height: 1366px;
 
+  @media (max-width: 1024px) {
+    overflow: unset;
+    .screen-alert {     
+      padding-top: 0;
+      transform: translateY(-120%);
+    }
+  }  
+
   @media (max-width: 880px) {
-    height: auto;
-    min-height: 100vh;
     background: #315d34 url(../images/bottom-screen-bg.png) right center no-repeat;
     background-size: cover;
-
-    .screen-alert, .screen-alert.mobile {
-      display: none;
-
-    }
+    height: unset;
+    max-height: unset;
+  } 
+  @media (max-width: 599px) {
+    .screen-alert {     
+      transform: translateY(-16%);
+    }    
   }
 }
 
@@ -1540,6 +1554,14 @@
     position: relative;
     display: flex;
     margin-left: auto;
+    border: 1px solid $primary;
+    border-radius: 10px;
+    overflow: hidden;
+
+    @media (max-width: 1366px) {
+     border-radius: 8px;
+    }       
+   
     @media (max-width: 768px) {     
       width: 100%;
       order: 1;     
@@ -1553,10 +1575,10 @@
       width: 415px;
       height: 57px;
       padding: 18px 10px;
-      // border-radius: 10px 0px 0px 10px;
-      border-top-left-radius: 10px;
-      border-bottom-left-radius: 10px;
-      border: 1px solid $primary;
+      // // border-radius: 10px 0px 0px 10px;
+      // border-top-left-radius: 10px;
+      // border-bottom-left-radius: 10px;
+      border: none;
       background-color: transparent;
       outline: none;
       @include fz(17);
@@ -1692,7 +1714,7 @@
     button.search {
       height: 57px;
       padding: 16px 24px;
-      border-radius: 0px 10px 10px 0px;
+      // border-radius: 0px 10px 10px 0px;
       border-left: unset;
       background: $primary;
       border-color: $primary;
@@ -1702,7 +1724,7 @@
       @media (max-width: 1366px) {
         height: 47px;
         padding: 11px 14px;
-        border-radius: 0px 8px 8px 0px;
+        // border-radius: 0px 8px 8px 0px;
       }
       // @media (max-width: 992px) {
       //   height: 34px;
@@ -1719,7 +1741,7 @@
       @media (max-width: 480px) {
         height: 40px;
         padding: 9px 10px;
-        border-radius: 0px 8px 8px 0px;
+        // border-radius: 0px 8px 8px 0px;
       }
       img {
         width: 24px;
@@ -2904,7 +2926,12 @@
         justify-content: center;
       }
       &__create {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
         @media (max-width: 768px) {
+          position: unset;
+          transform: unset;
           order: -1;
           width: 100%;
           margin-bottom: 38px;
@@ -3525,7 +3552,7 @@
     &__rating {
       color: #B08036;  
       @include fz(15);
-      font-family: $inner;
+      font-family: $inter;
       font-weight: 500;
       line-height: 145%;
       @media (max-width: 1680px) {
@@ -3546,14 +3573,80 @@
   &.orange {
     background-color: #BD7F40;
     background-image: url(../images/slider-mask.svg), url(../images/slider-bg-1.jpg);
+
+    .screen-alert {
+      visibility: hidden;
+      display: none;
+      &.orange {
+        visibility: visible;
+        display: block;
+        @media (max-width: 599px) {
+          visibility: hidden;
+          display: none;
+        }
+        &.mobile {
+          visibility: hidden;
+          display: none;
+          z-index: 1;
+          @media (max-width: 599px) {
+            visibility: visible;
+            display: block;
+          }
+        }
+      }
+    }
   }
   &.green {
     background-color: #23372B;
     background-image: url(../images/slider-mask.svg), url(../images/slider-bg-2.jpg);
+
+    .screen-alert {
+      visibility: hidden;
+      display: none;
+      &.green {
+        visibility: visible;
+        display: block;
+        @media (max-width: 599px) {
+          visibility: hidden;
+          display: none;
+        }
+        &.mobile {
+          visibility: hidden;
+          display: none;
+          z-index: 1;
+          @media (max-width: 599px) {
+            visibility: visible;
+            display: block;
+          }
+        }
+      }
+    }
   }
   &.brown {
     background-color: #975218;
     background-image: url(../images/slider-mask.svg), url(../images/slider-bg-3.jpg);
+
+    .screen-alert {
+      visibility: hidden;
+      display: none;
+      &.brown {
+        visibility: visible;
+        display: block;
+        @media (max-width: 599px) {
+          visibility: hidden;
+          display: none;
+        }
+        &.mobile {
+          visibility: hidden;
+          display: none;
+          z-index: 1;
+          @media (max-width: 599px) {
+            visibility: visible;
+            display: block;
+          }
+        }
+      }
+    }
   }
 
   .slider {
