--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -349,11 +349,11 @@
   // }
 }
 
-.screen-benefits {
-  // @media (max-width: 992px) {
-  //   height: calc(var(--vh, 1vh) * 100);
-  // }  
-}
+// .screen-benefits {
+//   @media (max-width: 992px) {
+//     height: calc(var(--vh, 1vh) * 100);
+//   }  
+// }
 
 .screen-alert {
   position: absolute;
@@ -3370,6 +3370,32 @@
   position: relative;
   max-width: 570px;
   margin: 0 auto;
+  .likes {
+    display: flex;
+    border-radius: 100px;
+    border: 4px solid #FFF;
+    background: #FFF8D9;
+    padding: 8px 14px;
+    color: #23372B;
+    @include fz(22);
+    font-weight: 700;
+    position: absolute;
+    z-index: 1;
+    top: -20px;
+    left: 50px;
+    span {
+      margin-right: 6px;
+    }
+    @media (max-width: 599px) {
+      padding: 6px 12px;
+      color: #23372B;
+      @include fz(18);
+      img {
+        width: 20px;
+        height: 20px;
+      }
+    }
+  }
   .mfp-popup-inner {
     width: 100%; 
     position: relative;
