--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -3508,6 +3508,18 @@
   .mfp-popup-inner {
     width: 100%; 
     position: relative;
+    max-height: 95vh;
+    overflow: auto;
+    // &::-webkit-scrollbar {
+    //   width: 3px;
+    //   height: 3px;
+    //   background-color: $bgc;
+    // }
+    &::-webkit-scrollbar-thumb {
+      width: 3px;
+      height: 3px;
+      background-color: #5E6738;
+    }
   }
   .popup-text {
     margin-bottom: 24px;
