--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2400,9 +2400,15 @@ img {
   .screen-promo .bottle-wrapper img {
     -o-object-fit: contain;
        object-fit: contain;
-    height: 60vh;
     margin-left: auto;
     margin-right: auto;
+    height: auto;
+    width: 90vw;
+  }
+}
+@media (max-width: 599px) {
+  .screen-promo .bottle-wrapper img {
+    width: 98vw;
   }
 }
 .screen-promo-content {
@@ -3468,6 +3474,11 @@ img {
   }
 }
 @media (max-width: 768px) {
+  .screen-promo-left .promo-text {
+    max-width: 85%;
+  }
+}
+@media (max-width: 599px) {
   .screen-promo-left .promo-text {
     max-width: 100%;
   }
