--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -175,9 +175,14 @@
       }
       @media (max-width: 768px) {
         object-fit: contain;
-        height: 60vh;
+        // height: 60vh;
         margin-left: auto;
         margin-right: auto;
+        height: auto;
+        width: 90vw;
+      }
+      @media (max-width: 599px) {        
+        width: 98vw;
       }
     }
   }
@@ -1103,6 +1108,9 @@
     //   max-width: 310px;
     // }
     @media (max-width: 768px) {
+      max-width: 85%;
+    }
+    @media (max-width: 599px) {
       max-width: 100%;
     }
     &-title {
