swiper to slide

--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -3993,6 +3993,7 @@
   
 
   .slider-images .slider-image img {
+    user-select: none;
     max-width: 100%;
     height: auto;
     // height: 100%;
