--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6786,6 +6786,10 @@ img {
           transform: translateY(20%);
 }
 .screen-slider .slider-images .slider-image img {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   max-width: 100%;
   height: auto;
   -webkit-transform: translateY(0%);
