--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -5,6 +5,7 @@ $font: #FFF;
 // $font_2: #2D2835;
 // $titles: #2D2835;
 $error: #FC8585;
+$like: #C74403;
 
 $primary: #FFF8D9;
 $primary_hover: lighten($primary, 10%);
