--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1053,6 +1053,9 @@ img {
   padding-right: 50px;
   margin-left: auto;
   margin-right: auto;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 .inner-fluid,
 .container-fluid {
@@ -3065,7 +3068,7 @@ img {
   left: 50%;
   bottom: min(120px, 12vh);
   margin-left: 840px;
-  z-index: 1;
+  z-index: 9;
   -webkit-transform: translate(-100%, 0);
       -ms-transform: translate(-100%, 0);
           transform: translate(-100%, 0);
@@ -3075,6 +3078,16 @@ img {
 }
 .benefits-slogan img {
   max-height: 29vh;
+}
+@media (max-width: 1680px) {
+  .benefits-slogan img {
+    max-height: 150px;
+  }
+}
+@media (max-width: 1366px) {
+  .benefits-slogan img {
+    max-height: 136px;
+  }
 }
 @media (max-width: 1780px) {
   .benefits-slogan {
@@ -3088,7 +3101,6 @@ img {
 }
 @media (max-width: 1440px) {
   .benefits-slogan {
-    right: 40px;
     bottom: min(100px, 9vh);
   }
 }
@@ -3097,7 +3109,7 @@ img {
     right: 35px;
   }
 }
-@media (max-width: 880px) {
+@media (max-width: 768px) {
   .benefits-slogan {
     display: none;
     visibility: hidden;
