--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -799,7 +799,7 @@
   left: 50%;
   bottom: min(120px, 12vh);
   margin-left: 840px;
-  z-index: 1;
+  z-index: 9;
   transform: translate(-100%,0);
   width: 240px;
   max-width: 12%;
@@ -807,8 +807,16 @@
 
   img {
     max-height: 29vh;
+    @media (max-width: 1680px) {
+      max-height: 150px;
+    }
+    @media (max-width: 1366px) {
+      max-height: 136px;      
+    }
   }
 
+  
+  
   @media (max-width: 1780px) {
     left: auto;
     margin-left: 0;
@@ -816,7 +824,7 @@
     transform: none;
   }
   @media (max-width: 1440px) {
-    right: 40px;
+    // right: 40px;
     bottom: min(100px, 9vh);
   }
 
@@ -824,7 +832,7 @@
     right: 35px;
   }
 
-  @media (max-width: 880px) {
+  @media (max-width: 768px) {
     display: none;
     visibility: hidden;
   }
