--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -832,6 +832,11 @@
     right: 35px;
   }
 
+  @media (max-width: 880px) {  
+    display: none;
+    visibility: hidden;
+  }
+
   @media (max-width: 768px) {
     display: none;
     visibility: hidden;
