--- a/src/css/style.css
+++ b/src/css/style.css
@@ -773,6 +773,7 @@ img {
     -webkit-box-align: end;
         -ms-flex-align: end;
             align-items: flex-end;
+    z-index: 10;
   }
 }
 
@@ -3964,6 +3965,7 @@ img {
 }
 @media (max-width: 1024px) {
   .screen-plans {
+    display: block;
     min-height: unset;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -5219,6 +5221,14 @@ img {
 
 .screen-plans-cards {
   color: #23372B;
+  min-height: 53vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .screen-plans-cards .row {
   margin-left: -10px;
@@ -5239,6 +5249,9 @@ img {
   }
 }
 @media (max-width: 1024px) {
+  .screen-plans-cards {
+    min-height: unset;
+  }
   .screen-plans-cards .row {
     margin-left: -6px;
     margin-right: -6px;
@@ -5590,7 +5603,7 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 20px;
+  margin-top: auto;
 }
 @media (max-width: 768px) {
   .screen-plans-cards .screen-plans-pagination {
@@ -5621,11 +5634,6 @@ img {
   }
   .screen-plans-cards .screen-plans-pagination__create .ui-btn {
     width: 100%;
-  }
-}
-@media (max-width: 1680px) {
-  .screen-plans-cards .screen-plans-pagination {
-    margin-top: 0;
   }
 }
 @media (max-width: 768px) {
