--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -285,7 +285,8 @@ img {
 		gap: 6px;
 	}
 	@media (max-width: 768px) {
-		align-items: flex-end;;
+		align-items: flex-end;
+		z-index: 10;
 	}
 }
 
